tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_68.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := 2;
               y := ((((1223 MOD 1) - (y DIV 1)) DIV (1 DIV 200)) + ((+ x) * (0 * 1223)));
               r := (200 > 1223);
               p := ((z + 0) >= 2);
               r := (z = 200);
  (* error *)  r := (~ (2 <= (1223 + y)));
               r := (r & r);
               p := ((200 > ((z - 2) + z)) OR ((x * (- 1223)) # (+ (x MOD z))));
               r := (q OR (2 # (+ (- 200))));
               x := y
END Test16.